Fix gx-grid-horizontal not working with "overflow: visible" tables
To ensure that the gx-grid-horizontal width does not overflow the gx-table-cell sizes, the content of the horizontal grid must have "position: absolute".
Also, a ResizeObserver is required to implement autogrow

--- a/src/components/grid-horizontal/grid-horizontal.scss
+++ b/src/components/grid-horizontal/grid-horizontal.scss
@@ -1,3 +1,4 @@
+@import "../common/base";
 @import "../common/layout-styling-config";
 @import "../grid-base/grid-base.scss";
 @import "../../../node_modules/swiper/swiper.min.css";
@@ -9,10 +10,24 @@ gx-grid-horizontal {
    */
   --gx-overflow-style: #{$default-overflow-style};
 
+  @include visibility(flex);
+
+  & > .gx-grid-horizontal-content {
+    display: flex;
+    position: relative;
+    flex: 1;
+
+    & > .swiper-wrapper {
+      position: absolute;
+      height: fit-content;
+    }
+  }
+
   & > [slot="grid-empty-loading-placeholder"] {
     height: 100%;
   }
 
+  // grid cell
   .swiper-slide {
     //Reset CSS required properties.
     flex-grow: 0;
